--- a/starterSdk/build.gradle
+++ b/starterSdk/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'com.android.library'
+
+    // needed for publishing sdk
+    id 'maven-publish'
 }
 
 android {
@@ -22,8 +25,10 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
@@ -35,4 +40,19 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+
+// needed to publish
+afterEvaluate {
+    publishing{
+        publications{
+            release(MavenPublication){
+                from components.release
+                groupId = "com.neo"
+                artifactId = "custom_sdk"
+                version = "1.0.0"
+            }
+        }
+    }
 }
